--- a/style.css
+++ b/style.css
@@ -13,17 +13,20 @@ html,body{
     overflow: hidden;
     background-color: #1137ca;
 }
+
 #page1{
     height: 100vh;
     width: 100vw;
     background-color: #0b48ed;
     position:relative;
 }
+
 #page1>video{
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
+
 #page1 nav{
     position: absolute;
     height: 10vh;
@@ -32,11 +35,19 @@ html,body{
     align-items: center;
     justify-content: space-between;
     padding: 0px 30px;
+    z-index: 10;
 }
+
 #page1>nav>img{
     margin-top: 1.7vw;
     width: 9%;
 }
+
+#right-nav{
+    display: flex;
+    gap: 10px;
+}
+
 #right-nav>button{
     padding: 10px 20px;
     border-radius: 50px;
@@ -46,6 +57,7 @@ html,body{
     font-size: 13px;
     font-weight: 500;
 }
+
 #bottom-page1{
     position: absolute;
     bottom:15%;
@@ -53,6 +65,7 @@ html,body{
     height: 40vh;
     width: 60vw;
 }
+
 #bottom-page1>h1{
    font-weight:300;
    margin-top: 10px;
@@ -60,6 +73,7 @@ html,body{
    line-height: 1;
    color: #fff;
 }
+
 #para{
     position: absolute;
     bottom: 0%;
@@ -68,13 +82,14 @@ html,body{
     display:flex;
     justify-content: space-between;
     align-items: center;
-
 }
+
 #para>h3{
     color: #fff;
     line-height: 1.5;
     font-weight: normal;
 }
+
 #para>button{
     padding: 10px 20px;
     border-radius: 50px;
@@ -82,6 +97,7 @@ html,body{
     background-color:#fff;
     color: #0b48ed;   
 }
+
 #page2{
     display: flex;
     align-items: start;
@@ -94,11 +110,13 @@ html,body{
     padding: 0vw 7vw;
     color: #fff;
 }
+
 #page2 h2{
     margin-bottom: 2vw;
     height: 10vh;
     font-weight: 500;
 }
+
 #page2 h1{
     width: 90%;
     font-weight: 100;
@@ -106,17 +124,20 @@ html,body{
     font-size: 4vw;
     color: #dadada69;
 }
+
 #page3{
     position: relative;
     height: 100vh;
     width: 100vw;
     background-color: red;
 }
+
 #page3>canvas{
     max-height: 100vh;
     max-width: 100vw;
     position: relative;
 }
+
 #page4{
     display: flex;
     align-items: flex-start;
@@ -127,13 +148,14 @@ html,body{
     position: relative;
     background-color: #1137ca;
 }
+
 #page4>h3{
     margin-left: 10vw;
     margin-bottom: 10vh;
     font-weight: 300;
     color:#fff;
-    
 }
+
 #page4>h1{
     margin-left: 10vw;
     font-size: 3.4vw;
@@ -141,16 +163,19 @@ html,body{
     color:#dadada69;
     width: 70%;
 }
+
 #page5{
     position: relative;
     height: 100vh;
     width: 100vw;
 }
+
 #page5>canvas{
     max-width: 100vw;
     max-height: 100vh;
     position: relative;
 }
+
 #page6{
     position: relative;
     background-color: #0a3cce;
@@ -161,6 +186,7 @@ html,body{
     height: 100vh;
     width: 100vw;
 }
+
 #page6 h1{
     color: #dadada69;
     margin-left: 15vh;
@@ -169,8 +195,8 @@ html,body{
     font-weight: 100;
     font-size: 3vw;
     width: 80%;
-
 }
+
 #page6 h3{
     margin-left: 15vh;
     font-size: 25px;
@@ -184,6 +210,7 @@ html,body{
     width: 100vw;
     background-color:#0a3cce;
 }
+
 #page7 canvas{
     position: relative;
     max-width: 100vw;
@@ -204,6 +231,7 @@ html,body{
     border-radius: 50%;
     border: 1px solid #fff;
 }
+
 .page7-cir{
     position: absolute;
     z-index: 9;
@@ -223,11 +251,13 @@ html,body{
     background-color: #0a3cce;
     position: relative;
 }
+
 #page8 video{
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
+
 #bottom{
     position: absolute;
     bottom: 5%;
@@ -235,12 +265,14 @@ html,body{
     transform: translateX(-50%);
     text-align: center;
 }
+
 #bottom h1{
     color: #fff;
     margin-bottom: 2vw;
     font-size: 5vw;
-    font-weight: 100    ;
+    font-weight: 100;
 }
+
 #bottom button{
     padding: 20px 30px;
     font-size: 1vw;
@@ -250,24 +282,28 @@ html,body{
     color: #0a3cce;
     text-align: center;
 }
+
 #page9{
     display: flex;
     height: 100vh;
     width: 100vw;
     position: relative;
 }
+
 .left{
     height: 100%;
     width: 50%;
     background-color: #0a3cce;
     position: relative;
 }
+
 .right{
     height: 100%;
     width: 50%;
     background-color: #0a3cce;
     position: relative;
 }
+
 .left>h1{
     position: absolute;
     color: #fff;
@@ -280,6 +316,7 @@ html,body{
     font-size: 7vw;
     margin-top: 28%;   
 }
+
 .right>img{
     height: 55%;
     width: 95%;
@@ -290,12 +327,14 @@ html,body{
     border-radius: 35px;
     background-size: cover;   
 }
+
 #page10{
     height: 100vh;
     width: 100vw;
     position: relative;
     background-color: #0a3cce;
 }
+
 .right10{
     position: relative;
     height: 100%;
@@ -303,6 +342,7 @@ html,body{
     left: 45%;
     background-color: #0a3cce;
 }
+
 .rightinner{
     display: flex;
     align-items: start;
@@ -312,24 +352,28 @@ html,body{
     background-color:#0a3cce;
     color: #fff;
 }
+
 .rightinner h1{
     top: 20%;
     line-height: 1;
     padding: 5px 5px;
     font-size: 2vw;
 }
+
 .rightinner p{
     font-size: 1.6vw;
     width: 80%;
     font-weight: 100;
     margin-top: 2vw;
 }
+
 #page11{
     position: relative;
     height: 115vh;
     width: 100vw;
     background-color: #fff;
 }
+
 #page11 h1{
     position: absolute;
     top:5%;
@@ -337,6 +381,7 @@ html,body{
     font-weight: 100;
     font-size: 4vw;
 }
+
 .page11-inner{
     display: flex;
     position: relative;
@@ -345,6 +390,7 @@ html,body{
     height: 23%;
     width: 100%;
 }
+
 .left11{
     position: relative;
     height: 100%;
@@ -353,23 +399,26 @@ html,body{
     border-radius: 10px;
     overflow: hidden;
 }
+
 .left11 img{
     object-fit: cover;
     height: 100%;
     width: 100%;
 }
+
 .right11{
     padding-top:5vw;
     left: 50%;
     position: absolute;
     height: 100%;
     width: 50%;
-    
 }
+
 .right11 h4{
     font-size: 1.4;
     font-weight: 100;
 }
+
 .right11 h2{
     margin-top: 15px;
     font-size: 1.8vw;
@@ -382,21 +431,25 @@ html,body{
     position: relative;
     background-color: #02268e;
 }
+
 .page12-inner{
     position: absolute;
     top: 35%;
     right: 10%;
     color: #fff;
 }
+
 .page12-inner h1{
     font-size: 5vw;
     font-weight: 100;
 }
+
 .page12-inner p{
     line-height: 1.5;
     font-weight: 100;
     font-size: 1.7vw;
 }
+
 #page13{
     height: 50vh;
     width: 100vw;
@@ -404,12 +457,14 @@ html,body{
     background-color: #000;
     padding: 7vw 10vw;
 }
+
 #page13 h1{
     color: #fff;
     font-size: 5vw;
     line-height: 1;
     font-weight: 100;
 }
+
 #page13 button{
     margin-top: 2vw;
     padding: 18px 30px;
@@ -418,12 +473,14 @@ html,body{
     color: #fff;
     background-color: #0a3cce;
 }
+
 #page14{
     position: relative;
     height: 60vh;
     width: 100vw;
     background-color: #000;
 }
+
 .page14-inner{
     position: relative;
     display: flex;
@@ -436,6 +493,7 @@ html,body{
     border-top: 0.5px solid #ffffff5c;
     border-bottom: 0.5px solid #ffffff48;
 }
+
 .page14-inner i{
     font-size: 3vh;
     color: #fff;
@@ -443,14 +501,15 @@ html,body{
     position: relative;
     z-index: 9999;
 }
+
 .page14-inner h1{
     font-size: 2vw;
     color: #fff;
     font-weight: 100;
     position: relative;
     z-index: 9999;
-
 }
+
 #center14{
     height: 0%;
     width: 100%;
@@ -461,6 +520,336 @@ html,body{
     transform: translate(-50%,-50%);
     transition: all ease 0.5s;
 }
+
 .page14-inner:hover #center14{
     height: 100%;
+}
+
+/* Mobile Responsive Styles */
+@media screen and (max-width: 768px) {
+    /* Page 1 - Hero Section */
+    #page1>nav>img{
+        margin-top: 3vw;
+        width: 20%;
+    }
+    
+    #right-nav{
+        flex-direction: column;
+        gap: 5px;
+    }
+    
+    #right-nav>button{
+        padding: 8px 15px;
+        font-size: 11px;
+    }
+    
+    #bottom-page1{
+        bottom: 10%;
+        left: 5%;
+        width: 90vw;
+        height: 50vh;
+    }
+    
+    #bottom-page1>h1{
+        font-size: 12vw;
+        line-height: 0.9;
+    }
+    
+    #para{
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px;
+        width: 100%;
+        height: auto;
+        position: static;
+        margin-top: 20px;
+    }
+    
+    #para>h3{
+        font-size: 4vw;
+        line-height: 1.4;
+    }
+    
+    #para>button{
+        padding: 12px 24px;
+        font-size: 3.5vw;
+    }
+    
+    /* Page 2 */
+    #page2{
+        padding: 0vw 5vw;
+        justify-content: flex-start;
+        padding-top: 10vh;
+    }
+    
+    #page2 h2{
+        font-size: 4vw;
+        margin-bottom: 5vw;
+        height: auto;
+    }
+    
+    #page2 h1{
+        font-size: 7vw;
+        width: 100%;
+        line-height: 1.2;
+    }
+    
+    /* Page 4 */
+    #page4>h3{
+        margin-left: 5vw;
+        margin-bottom: 5vh;
+        font-size: 4vw;
+    }
+    
+    #page4>h1{
+        margin-left: 5vw;
+        font-size: 6vw;
+        width: 90%;
+        line-height: 1.3;
+    }
+    
+    /* Page 6 */
+    #page6 h3{
+        margin-left: 5vw;
+        font-size: 4vw;
+    }
+    
+    #page6 h1{
+        margin-left: 5vw;
+        font-size: 6vw;
+        width: 90%;
+        margin-top: 5vh;
+    }
+    
+    /* Page 7 Circles */
+    .outer-cir{
+        height: 40vw;
+        width: 40vw;
+    }
+    
+    /* Page 8 */
+    #bottom h1{
+        font-size: 12vw;
+        margin-bottom: 5vw;
+    }
+    
+    #bottom button{
+        padding: 15px 25px;
+        font-size: 4vw;
+    }
+    
+    /* Page 9 */
+    #page9{
+        flex-direction: column;
+        height: auto;
+    }
+    
+    .left{
+        width: 100%;
+        height: 40vh;
+    }
+    
+    .right{
+        width: 100%;
+        height: 60vh;
+    }
+    
+    .left>h1{
+        font-size: 12vw;
+        margin-left: 5vw;
+        margin-top: 15%;
+        text-align: center;
+    }
+    
+    .right>img{
+        width: 90%;
+        height: 80%;
+        right: 5%;
+        top: 50%;
+        border-radius: 20px;
+    }
+    
+    /* Page 10 */
+    #page10{
+        height: auto;
+        min-height: 100vh;
+    }
+    
+    .right10{
+        width: 100%;
+        left: 0%;
+        padding: 5vw;
+    }
+    
+    .rightinner{
+        height: auto;
+        min-height: 200px;
+        margin-bottom: 8vw;
+        padding-bottom: 5vw;
+    }
+    
+    .rightinner h1{
+        font-size: 6vw;
+        line-height: 1.2;
+    }
+    
+    .rightinner p{
+        font-size: 4vw;
+        width: 100%;
+        margin-top: 4vw;
+        line-height: 1.4;
+    }
+    
+    /* Page 11 - Blog Section */
+    #page11{
+        height: auto;
+        min-height: 120vh;
+        padding-bottom: 10vh;
+    }
+    
+    #page11 h1{
+        font-size: 8vw;
+        left: 5%;
+    }
+    
+    .page11-inner{
+        flex-direction: column;
+        height: auto;
+        margin-bottom: 8vw;
+        top: 15%;
+    }
+    
+    .left11{
+        width: 90%;
+        height: 50vw;
+        left: 5%;
+        margin-bottom: 4vw;
+    }
+    
+    .right11{
+        position: static;
+        width: 90%;
+        padding: 0 5%;
+        padding-top: 0;
+    }
+    
+    .right11 h4{
+        font-size: 3vw;
+    }
+    
+    .right11 h2{
+        font-size: 5vw;
+        margin-top: 2vw;
+        line-height: 1.3;
+    }
+    
+    /* Page 12 */
+    .page12-inner{
+        top: 30%;
+        right: 5%;
+        left: 5%;
+        text-align: center;
+    }
+    
+    .page12-inner h1{
+        font-size: 10vw;
+    }
+    
+    .page12-inner p{
+        font-size: 4vw;
+        line-height: 1.4;
+        margin-top: 5vw;
+    }
+    
+    /* Page 13 */
+    #page13{
+        padding: 10vw 5vw;
+        height: auto;
+        min-height: 50vh;
+    }
+    
+    #page13 h1{
+        font-size: 10vw;
+        line-height: 1.1;
+    }
+    
+    #page13 button{
+        margin-top: 5vw;
+        padding: 15px 25px;
+        font-size: 4vw;
+    }
+    
+    /* Page 14 - Social Links */
+    #page14{
+        height: auto;
+    }
+    
+    .page14-inner{
+        padding: 0vw 8vw;
+        height: 15vh;
+        min-height: 80px;
+    }
+    
+    .page14-inner h1{
+        font-size: 5vw;
+    }
+    
+    .page14-inner i{
+        font-size: 5vw;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    /* Extra small mobile devices */
+    #page1>nav>img{
+        width: 25%;
+    }
+    
+    #bottom-page1>h1{
+        font-size: 14vw;
+    }
+    
+    #para>h3{
+        font-size: 4.5vw;
+    }
+    
+    #page2 h1{
+        font-size: 8vw;
+    }
+    
+    #page4>h1{
+        font-size: 7vw;
+    }
+    
+    #page6 h1{
+        font-size: 7vw;
+    }
+    
+    .left>h1{
+        font-size: 14vw;
+    }
+    
+    #bottom h1{
+        font-size: 14vw;
+    }
+    
+    .rightinner h1{
+        font-size: 7vw;
+    }
+    
+    .rightinner p{
+        font-size: 4.5vw;
+    }
+    
+    .page12-inner h1{
+        font-size: 12vw;
+    }
+    
+    .page12-inner p{
+        font-size: 4.5vw;
+    }
+    
+    #page13 h1{
+        font-size: 12vw;
+    }
 }
